--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
         const appName = 'c:CRMAnalyticsDashboardApp';
         const componentName = 'c:CRMAnalyticsDashboard';
-        const lightningEndpoint = 'https://crhamericas--ssdev.sandbox.lightning.force.com';
+        const lightningEndPointURI = 'https://crhamericas--ssdev.sandbox.lightning.force.com';
         const targetElement = document.querySelector('#lightning-out');
         const componentAttributes = {};
+        const authToken = '00DOx000002qV1l!AQEAQD5D7DNO58IyPds.23GdUsLdkZoPWpEnixHpg7Lzt14zFSxdI2B3VVge2ytvDyNNfjALJ3bO68mJg.VtcWYt.lMcJgTq';
 
 
         $Lightning.use(
@@ -32,7 +33,8 @@
                     }
                 );
             },
-            lightningEndpoint
+            lightningEndPointURI,
+            authToken
         );
 
 
