--- a/index.html
+++ b/index.html
@@ -21,21 +21,27 @@
         const authToken = '00DOx000002qV1l!AQEAQD5D7DNO58IyPds.23GdUsLdkZoPWpEnixHpg7Lzt14zFSxdI2B3VVge2ytvDyNNfjALJ3bO68mJg.VtcWYt.lMcJgTq';
 
 
-        $Lightning.use(
-            appName,
-            function () {
-                $Lightning.createComponent(
-                    componentName,
-                    componentAttributes,
-                    targetElement,
-                    function (cmp) {
-                        console.log('lightning component created.');
-                    }
-                );
-            },
-            lightningEndPointURI,
-            authToken
-        );
+        /* $Lightning.use(
+             appName,
+             function () {
+                 $Lightning.createComponent(
+                     componentName,
+                     componentAttributes,
+                     targetElement,
+                     function (cmp) {
+                         console.log('lightning component created.');
+                     }
+                 );
+             },
+             lightningEndPointURI,
+             authToken
+         );*/
+
+        $Lightning.use("wave:waveApp", function () {
+            $Lightning.createComponent("wave:waveDashboard",
+                { dashboardId: "01Z1O000000oUfAUAU" },
+                targetElement);
+        }, lightningEndPointURI, authToken)
 
 
     </script>
