--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CRM Analytics Dashboard</title>
-    <script src="https://crhamericas--ssdev.sandbox.my.salesforce.com/lightning/lightning.out.js"></script>
+    <script src="https://crhamericas--ssdev.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
 
         const appName = 'c:CRMAnalyticsDashboardApp';
         const componentName = 'c:CRMAnalyticsDashboard';
-        const lightningEndPointURI = 'https://crhamericas--ssdev.sandbox.my.salesforce.com';
+        const lightningEndPointURI = 'https://crhamericas--ssdev.sandbox.lightning.force.com';
         const targetElement = document.querySelector('#lightning-out');
         const componentAttributes = {};
-        const authToken = '00DOx000002qV1l!AQEAQD5D7DNO58IyPds.23GdUsLdkZoPWpEnixHpg7Lzt14zFSxdI2B3VVge2ytvDyNNfjALJ3bO68mJg.VtcWYt.lMcJgTq';
+        const authToken = '00DOx000002qV1l!AQEAQMYTF8TYTk4UbNn4yQ9Hz3MRHaWiWWQurdGc9ycgLQMND7oxlBIXB2YM33SRSslhz5LvfkkmiIiZEtdLgYWvt79lbC3r';
 
 
         /* $Lightning.use(
