--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         const lightningEndPointURI = 'https://crhamericas--ssdev.sandbox.lightning.force.com';
         const targetElement = document.querySelector('#lightning-out');
         const componentAttributes = {};
-        const authToken = '00DOx000002qV1l!AQEAQMYTF8TYTk4UbNn4yQ9Hz3MRHaWiWWQurdGc9ycgLQMND7oxlBIXB2YM33SRSslhz5LvfkkmiIiZEtdLgYWvt79lbC3r';
+        const authToken = '00DOx000002qV1l!AQEAQD5D7DNO58IyPds.23GdUsLdkZoPWpEnixHpg7Lzt14zFSxdI2B3VVge2ytvDyNNfjALJ3bO68mJg.VtcWYt.lMcJgTq';
 
 
         /* $Lightning.use(
