--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         $Lightning.use("wave:waveApp", function () {
             $Lightning.createComponent("wave:waveDashboard",
-                { dashboardId: "01Z1O000000oUfAUAU" },
+                { dashboardId: "01ZOx000002gABVMA2" },
                 targetElement);
         }, lightningEndPointURI, authToken)
 
