--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         const lightningEndPointURI = 'https://crhamericas--ssdev.sandbox.lightning.force.com';
         const targetElement = document.querySelector('#lightning-out');
         const componentAttributes = {};
-        const authToken = '00DOx000002qV1l!AQEAQD5D7DNO58IyPds.23GdUsLdkZoPWpEnixHpg7Lzt14zFSxdI2B3VVge2ytvDyNNfjALJ3bO68mJg.VtcWYt.lMcJgTq';
+        const authToken = '00DOx000002qV1l!AQEAQE3CwYv5.bqb5Rmeaoz8vjHrGzPapjXVZDTObSQ2VwgNXPovZrTdx2F2rD2roCHggS6lha1z2h5dSI5z.ksVnp2ee44B';
 
 
-        $Lightning.use(
+        /*$Lightning.use(
             appName,
             function () {
                 $Lightning.createComponent(
@@ -40,13 +40,15 @@
             },
             lightningEndPointURI,
             authToken
-        );
+        );*/
 
-        /* $Lightning.use("wave:waveApp", function () {
+ 
+
+          $Lightning.use("wave:waveApp", function () {
              $Lightning.createComponent("wave:waveDashboard",
-                 { dashboardId: "01ZOx000002gABVMA2" },
+                 { dashboardId: "0FKPb00000001ddOAA" },
                  targetElementD);
-         }, lightningEndPointURI, authToken) */
+         }, lightningEndPointURI, authToken)  
 
 
     </script>
