--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           $Lightning.use("wave:waveApp", function () {
              $Lightning.createComponent("wave:waveDashboard",
                  { dashboardId: "0FKPb00000001ddOAA" },
-                 targetElementD);
+                 targetElement);
          }, lightningEndPointURI, authToken)  
 
 
