--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <title>CRM Analytics Dashboard</title>
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' filesystem: http://*.radian6.com:* https://*.office.com https://*.office365.com https://*.outlook.com https://*.quipelements.com:* https://*.radian6.com:* https://*.vf.force.com:* https://crhamericas--ssdev--c.sandbox.vf.force.com https://crhamericas--ssdev.sandbox.builder.salesforce-experience.com https://crhamericas--ssdev.sandbox.lightning.force.com https://crhamericas--ssdev.sandbox.live-preview.salesforce-experience.com https://crhamericas--ssdev.sandbox.my.salesforce.com https://crhamericas--ssdev.sandbox.preview.salesforce-experience.com">
     <script src="https://crhamericas--ssdev.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
 </head>
 
