--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
             $Lightning.createComponent("wave:waveDashboard",
                 {
                     dashboardId: "0FKPb00000001ddOAA",
-                    height: "1000px",                // Set height of the dashboard 
-                    showHeader: false,               // Show or hide header
-                    showTitle: true,                // Show or hide title
-                    autoRefresh: 300
-                },              // Auto-refresh interval in seconds },
+                    height: "650px",
+                    showHeader: false,
+                    showTitle: false,
+                },
                 targetElement);
         }, lightningEndPointURI, authToken)
 
