--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         const authToken = '00DOx000002qV1l!AQEAQE3CwYv5.bqb5Rmeaoz8vjHrGzPapjXVZDTObSQ2VwgNXPovZrTdx2F2rD2roCHggS6lha1z2h5dSI5z.ksVnp2ee44B';
 
 
-        /*$Lightning.use(
+        $Lightning.use(
             appName,
             function () {
                 $Lightning.createComponent(
@@ -37,13 +37,9 @@
             lightningEndPointURI,
             authToken
         );
-    })*/
 
 
-
-
-
-        $Lightning.use("wave:waveApp", function () {
+        /*$Lightning.use("wave:waveApp", function () {
             $Lightning.createComponent("wave:waveDashboard",
                 {
                     dashboardId: "0FKPb00000001ddOAA",
@@ -52,7 +48,7 @@
                     showTitle: false,
                 },
                 targetElement);
-        }, lightningEndPointURI, authToken)
+        }, lightningEndPointURI, authToken)*/
 
 
     </script>
