--- a/main.html
+++ b/main.html
@@ -111,8 +111,7 @@
                 method: "POST",
                 headers: myHeaders,
                 body: urlencoded,
-                redirect: "follow",
-                mode: 'no-cors'
+                redirect: "follow"
             };
 
             fetch("https://crhamericas--ssdev.sandbox.my.salesforce.com/services/oauth2/token", requestOptions)
