--- a/main.html
+++ b/main.html
@@ -99,6 +99,7 @@
             myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
             myHeaders.append("Accept", "application/json");
             myHeaders.append('Access-Control-Allow-Origin', '*');
+            myHeaders.append('Access-Control-Allow-Methods', 'GET, POST, OPTIONS');
 
          
             const urlencoded = new URLSearchParams();
