--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>CRM Analytics Dashboard (External)</h1>
+    <h1>CRM Analytics Dashboard (Dynamic)</h1>
     <div id="lightning-out"></div>
 
     <script>
@@ -98,7 +98,7 @@
             const myHeaders = new Headers();
             myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
             myHeaders.append("Accept", "application/json");
-            myHeaders.append('Access-Control-Allow-Origin', '*');
+            myHeaders.append('Access-Control-Allow-Origin', 'https://nisar-99.github.io');
             myHeaders.append('Access-Control-Allow-Methods', 'GET, POST, OPTIONS');
 
          
