--- a/main.html
+++ b/main.html
@@ -98,7 +98,7 @@
             const myHeaders = new Headers();
             myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
             myHeaders.append("Accept", "application/json");
-            myHeaders.append('Access-Control-Allow-Origin', 'https://nisar-99.github.io');
+            myHeaders.append('Access-Control-Allow-Origin', '*');
             myHeaders.append('Access-Control-Allow-Methods', 'GET, POST, OPTIONS');
 
          
