--- a/main.html
+++ b/main.html
@@ -91,10 +91,10 @@
         }
 
 
-        //applyInitialSettings()
+        applyInitialSettings()
 
 
-        const callSalesforce =  () => {
+        /*const callSalesforce =  () => {
             const myHeaders = new Headers();
             myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
             myHeaders.append("Accept", "application/json");
@@ -122,7 +122,7 @@
                 .catch((error) => console.error(error));
         }
 
-        callSalesforce();
+        callSalesforce();*/
 
 
 
