--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         const lightningEndPointURI = 'https://crhamericas--ssdev.sandbox.lightning.force.com';
         const targetElement = document.querySelector('#lightning-out');
         const componentAttributes = {};
-        const authToken = '00DOx000002qV1l!AQEAQE3CwYv5.bqb5Rmeaoz8vjHrGzPapjXVZDTObSQ2VwgNXPovZrTdx2F2rD2roCHggS6lha1z2h5dSI5z.ksVnp2ee44B';
+        const authToken = '00DOx000002qV1l!AQEAQPn_Z.iAtqB_78SSK3rqgIQQxm0106PxN8oDoanfKsr_UQMPFz_efIIK58fZy7WaGQUjp85NY3_nhdlSyafZDPprjMW_';
 
 
         /*$Lightning.use(
