--- a/main.html
+++ b/main.html
@@ -13,10 +13,12 @@
     <h1>CRM Analytics Dashboard (Dynamic)</h1>
     <div id="lightning-out"></div>
 
-    <script> 
-        const targetElement = document.querySelector('#lightning-out');
-      
-        const createDashboard = () => {
+    <script>
+
+        const createDashboard = (authToken) => {
+
+            const targetElement = document.querySelector('#lightning-out');
+
             $Lightning.use("wave:waveApp", function () {
                 $Lightning.createComponent("wave:waveDashboard",
                     {
@@ -27,7 +29,9 @@
                     },
                     targetElement);
             }, lightningEndPointURI, authToken)
-        } 
+        }
+
+
 
         const BASE_URL = 'https://crhamericas--ssdev.sandbox.my.salesforce.com';
         const CLIENT_ID = '3MVG9XhRuzJUtKtBIV.Z03Bm3It4rkpTxKij_wutXgjn7p3BfCheiLm7ABvvAfVlHB2hDf.s3DtWW5fOEOEzn';
@@ -42,8 +46,6 @@
             const myHeaders = new Headers();
             myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
             myHeaders.append("Accept", "application/json");
-            //myHeaders.append('Access-Control-Allow-Origin', 'https://nisar-99.github.io');
-            //myHeaders.append('Access-Control-Allow-Methods', 'GET, POST, OPTIONS');
 
 
             const urlencoded = new URLSearchParams();
@@ -62,7 +64,10 @@
 
             fetch(BASE_URL + "/services/oauth2/token", requestOptions)
                 .then((response) => response.json())
-                .then((result) => console.log(result))
+                .then((result) => {
+                    console.log(result)
+                    createDashboard(result.access_token);
+                })
                 .catch((error) => console.error(error));
         }
 
