--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
                 .then((result) => {
                     console.log(result)
                     createDashboard(result.access_token);
-                    localStorage.setItem(LOCAL_STORAGE_KEY, JSON.stringify({ token: result.access_token, datetime: new Date().toISOString() }));
+                    window.localStorage.setItem(LOCAL_STORAGE_KEY, JSON.stringify({ token: result.access_token, datetime: new Date().toISOString() }));
                 })
                 .catch((error) => console.error(error));
         }
@@ -77,7 +77,7 @@
         const checkConfig = () => {
             const currentDateTime = new Date(); // Current date and time 
             const currentTimeString = currentDateTime.toISOString(); // ISO string format
-            let storedData = LocalStorage.get(LOCAL_STORAGE_KEY);
+            let storedData = window.localStorage.get(LOCAL_STORAGE_KEY);
             storedData = storedData != null ? JSON.parse(storedData) : null;
 
             if (storedData) {
